--- a/BlendWorks Server/MainWindow.xaml
+++ b/BlendWorks Server/MainWindow.xaml
@@ -3,18 +3,20 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="BlendWorks Server" Height="456" Width="772" Background="#FF75FF9B" FontFamily="Segoe WP SemiLight" FontSize="14" Icon="icon_server.ico">
     <Grid x:Name="MainGrid">
+        <Label x:Name="AboutLabel" Content="About" HorizontalAlignment="Right" Margin="0,0,10,0" VerticalAlignment="Bottom" Width="88" HorizontalContentAlignment="Right" Foreground="#FF236A36" Cursor="Hand"/>
+
+
         <Button x:Name="StartServerButton" Content="OFF" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="107" Height="27" Background="#4CFF0000" BorderBrush="#FFFF3636" BorderThickness="10,0,0,0" FontSize="14"/>
         <Button x:Name="StopServerButton" Content="ON" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="107" Height="27" Background="#6633BB00" BorderBrush="#FF1F7200" BorderThickness="0,0,10,0" IsEnabled="False" Opacity="0" RenderTransformOrigin="0.5,0.5">
             <Button.RenderTransform>
                 <TranslateTransform Y="-27"/>
             </Button.RenderTransform>
         </Button>
-        <ScrollViewer x:Name="LogScrollViewer" Margin="10,268,10,10">
+        <ScrollViewer x:Name="LogScrollViewer" Margin="10,268,10,23">
             <ScrollViewer.Effect>
                 <DropShadowEffect BlurRadius="10" ShadowDepth="0.6"/>
             </ScrollViewer.Effect>
-            <TextBlock x:Name="LogTextBlock"  TextWrapping="Wrap"  Background="#A3000000" Foreground="#FF17FF00" FontFamily="Consolas" Padding="5" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True">
-            </TextBlock>
+            <TextBlock x:Name="LogTextBlock"  TextWrapping="Wrap"  Background="#A3000000" Foreground="#FF17FF00" FontFamily="Consolas" Padding="5" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True"/>
         </ScrollViewer>
         <Button x:Name="SendFileButton" Content="ADD JOB..." HorizontalAlignment="Right" Margin="0,69,10,0" VerticalAlignment="Top" Width="107" Height="65" Background="#19000000" BorderBrush="Black" BorderThickness="10,0,0,0"/>
         <ListView x:Name="ClientListView" Height="124" Margin="10,10,122,0" VerticalAlignment="Top" Background="#19000000" BorderBrush="{x:Null}" Foreground="#FF183220">
