--- a/BlendWorks Client/MainWindow.xaml
+++ b/BlendWorks Client/MainWindow.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="BlendWorks" Height="455" Width="1039" Background="#FF72ABFF" FontFamily="Segoe WP SemiLight" FontSize="14" Icon="icon.ico">
     <Grid>
-        <ScrollViewer x:Name="LogScrollViewer" Margin="10,141,10,10">
+        <ScrollViewer x:Name="LogScrollViewer" Margin="10,141,10,34">
             <ScrollViewer.Effect>
                 <DropShadowEffect BlurRadius="10" ShadowDepth="0.6"/>
             </ScrollViewer.Effect>
@@ -26,5 +26,6 @@
         </TextBlock>
         <TextBox x:Name="BlenderExecutableTextBox" HorizontalAlignment="Right" Height="46" Margin="0,10,219,0" TextWrapping="Wrap" Text="---" VerticalAlignment="Top" Width="342" IsReadOnly="True" IsUndoEnabled="False" Background="#19000000" BorderBrush="Black" BorderThickness="10,0,0,0" Padding="5,5,5,0"/>
         <Button x:Name="ChangeBlenderExecutableButton" Content="CHANGE" HorizontalAlignment="Right" Margin="0,56,473,0" VerticalAlignment="Top" Width="88" Height="29" Background="#19000000" BorderBrush="Black" BorderThickness="10,0,0,0"/>
+        <Label x:Name="AboutLabel" Content="About" HorizontalAlignment="Right" Margin="0,0,10,0" VerticalAlignment="Bottom" Width="88" HorizontalContentAlignment="Right" Foreground="#FF37537E" Cursor="Hand"/>
     </Grid>
 </Window>
