--- a/BlendWorks Client/AboutWindow.xaml
+++ b/BlendWorks Client/AboutWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Name="AboutWindowRoot" x:Class="AboutWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="About" Height="368" Width="506" Icon="icon_server.ico" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+    Title="About" Height="368" Width="506" Icon="icon.ico" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
     <Grid>
         <Label Content="made for" HorizontalAlignment="Left" Margin="344,262,0,0" VerticalAlignment="Top" FontSize="14" Height="16" Padding="0"/>
         <Label Content="view on" HorizontalAlignment="Left" Margin="55,258,0,0" VerticalAlignment="Top" FontSize="14" Height="22" Padding="0"/>
